# chatbot-project

./: .env  .gitignore  docker-compose.yml
backend/: pyproject.toml  test.py  tor.md  tor.txt
backend/app/: backend_pre_start.py  crud.py  initial_data.py  main.py  models.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 31afe9090187_create_tables.py  36b58dd31da1_added_tables.py  4b23734e5fb1_create_tables.py  5afd9eb26109_create_tables.py  68c90b2d23b7_create_tables.py  87a1f95a8030_create_account_table.py  9c7856d3ab95_added_tables.py  9f4a182022bb_added_account_table.py  b48732bd4f72_first.py  c318481ea46b_create_account_table.py  d0268afb3b31_added_tables.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: knowledge.py
backend/app/core/: config.py  db.py  models.py
backend/app/modules/knowledge/: config.py  db.py  document.py  hints.py  image_processing.py  main.py  ollama.py  schemas.py  text_normalization.py
backend/app/services/: knowledge.py
frontend/: package.json
