[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "alembic>=1.17.2",
    "fastapi[standard]<1.0.0,>=0.126.0",
    "passlib[bcrypt]>=1.7.4",
    "pdf2image>=1.17.0",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.2",
    "pyjwt>=2.10.1",
    "pypdf>=6.6.0",
    "pytesseract>=0.3.13",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.27",
    "tenacity>=9.1.2",
    "numpy<2.0.0",
    "opencv-python>=4.11.0.86",
    "easyocr>=1.7.2",
    "psutil>=7.2.1",
]
